welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: type mismatch;
 found   : Int(5)
 required: java.awt.Color
  var tab = Array[Color](5)
                         ^